...
                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="FA0-yK-aiw" customClass="LocationImageView" customModule="RainOrShine" customModuleProvider="target">
                                <rect key="frame" x="0.0" y="108" width="414" height="628"/>
                                <accessibility key="accessibilityConfiguration" identifier="Location Image">
                                    <bool key="isElement" value="YES"/>
                                </accessibility>
...
                                <rect key="frame" x="0.0" y="692" width="414" height="44"/>
                                <items>
                                    <barButtonItem title="Settings" id="ceh-uS-8pd">
                                        <connections>
                                            <action selector="settingsButtonTapped:" destination="BYZ-38-t0r" id="0yb-Je-eNs"/>
...
                                    </barButtonItem>
                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="02S-pd-6ko"/>
                                    <barButtonItem image="GPSIcon" id="vMN-Yn-C4l">
                                        <connections>
                                            <action selector="currentLocationButtonTapped:" destination="BYZ-38-t0r" id="TIG-4h-Yzz"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Temperature Unit" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WGe-uI-LXO">
                                                    <rect key="frame" x="8" y="11" width="126.66666666666666" height="21"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Update Weather Every" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pKt-9B-ElF">
                                                    <rect key="frame" x="8" y="12" width="272" height="20"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Use Default Photos" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Se9-XN-a6R">
                                                    <rect key="frame" x="8" y="11" width="140" height="21"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Change Photos Every" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ake-YR-wT5">
                                                    <rect key="frame" x="8" y="12" width="162" height="20"/>
                                                    <constraints>
...
